--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.0
   firebase_storage: ^11.2.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
